--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
       "locator": "https://github.com/litehelpers/Cordova-sqlite-storage.git",
       "id": "cordova-sqlite-storage"
     },
-    "com.rjfun.cordova.sms"
+    "com.rjfun.cordova.sms",
+    "org.apache.cordova.file"
   ],
   "cordovaPlatforms": [
     "android"
