--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "ionic-angular": "2.0.0-beta.3",
     "ionic-native": "^1.0.12",
     "ionicons": "3.0.0-alpha.3",
+    "jasmine": "^2.4.1",
+    "protractor": "^3.1.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.14"
@@ -15,15 +17,12 @@
     "babel-loader": "6.2.3",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.5.0",
-    "chai": "^3.5.0",
-    "cucumber": "^0.9.5",
-    "protractor-cucumber": "^0.1.8",
     "strip-sourcemap-loader": "0.0.1"
   },
   "name": "dbt",
   "description": "dbt: An Ionic project",
   "scripts": {
-    "test": "cucumber.js"
+    "test": "protractor protractorConfig.js"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
