--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "angular2": "2.0.0-beta.6",
+    "appium": "^1.5.0",
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.13",
     "ionic-angular": "2.0.0-beta.3",
@@ -10,6 +11,7 @@
     "protractor": "^3.1.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
+    "wd": "^0.4.0",
     "zone.js": "0.5.14"
   },
   "devDependencies": {
@@ -22,6 +24,8 @@
   "name": "dbt",
   "description": "dbt: An Ionic project",
   "scripts": {
+    "test:device:setup": "appium",
+    "test:device": "protractor protractorAppiumConfig.js",
     "test:setup": "webdriver-manager start & ionic serve",
     "test": "protractor protractorConfig.js"
   },
