--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
+.vscode/
+
+
+# Specifies intentionally untracked files to ignore when using Git
+# http://git-scm.com/docs/gitignore
+
+*~
+*.sw[mnpcod]
+*.log
+*.tmp
+*.tmp.*
+log.txt
+*.sublime-project
+*.sublime-workspace
+
+.idea/
+.sass-cache/
+.versions/
+coverage/
 node_modules/
-www/build/
+tmp/
+temp/
+hooks/
 platforms/
 plugins/
+plugins/android.json
+plugins/ios.json
+www/build/
+$RECYCLE.BIN/
+
 .DS_Store
-.vscode
+Thumbs.db
+UserInterfaceState.xcuserstate
