--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.13",
     "ionic-angular": "2.0.0-beta.3",
-    "ionic-native": "^1.0.12",
+    "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
     "jasmine": "^2.4.1",
     "protractor": "^3.1.1",
@@ -15,11 +15,17 @@
     "zone.js": "0.5.14"
   },
   "devDependencies": {
-    "babel-core": "6.5.2",
-    "babel-loader": "6.2.3",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-preset-es2015": "6.5.0",
-    "strip-sourcemap-loader": "0.0.1"
+     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-es2015": "6.6.0",
+    "babelify": "7.2.0",
+    "del": "2.2.0",
+    "gulp": "3.9.1",
+    "gulp-watch": "4.3.5",
+    "ionic-gulp-browserify-es2015": "^1.0.0",
+    "ionic-gulp-fonts-copy": "^1.0.0",
+    "ionic-gulp-html-copy": "^1.0.0",
+    "ionic-gulp-sass-build": "^1.0.0",
+    "ionic-gulp-scripts-copy": "^1.0.0"
   },
   "name": "dbt",
   "description": "dbt: An Ionic project",
