--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "zone.js": "0.5.14"
   },
   "devDependencies": {
-     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.6.0",
     "babelify": "7.2.0",
+    "browserify": "^13.0.0",
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-watch": "4.3.5",
@@ -25,7 +26,10 @@
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^1.0.0"
+    "ionic-gulp-scripts-copy": "^1.0.0",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.3",
+    "karma-jasmine": "^0.3.8"
   },
   "name": "dbt",
   "description": "dbt: An Ionic project",
