--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "dependencies": {
     "angular2": "2.0.0-beta.6",
-    "appium": "^1.5.0",
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.13",
     "ionic-angular": "2.0.0-beta.3",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
-    "jasmine": "^2.4.1",
-    "protractor": "^3.1.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
-    "wd": "^0.4.0",
     "zone.js": "0.5.14"
   },
   "devDependencies": {
@@ -30,15 +26,18 @@
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.3",
     "karma-chrome-launcher": "^0.2.3",
-    "karma-jasmine": "^0.3.8"
+    "karma-jasmine": "^0.3.8",
+    "wd": "^0.4.0",
+    "jasmine": "^2.4.1",
+    "protractor": "^3.1.1",
+    "appium": "^1.5.0"
   },
   "name": "dbt",
   "description": "dbt: An Ionic project",
   "scripts": {
-    "test:device:setup": "appium",
-    "test:device": "protractor protractorAppiumConfig.js",
-    "test:setup": "webdriver-manager start & ionic serve",
-    "test": "protractor protractorConfig.js"
+    "test:setup": "appium",
+    "test": "protractor protractorAppiumConfig.js",
+    "test:spec": "karma start"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
