--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "dependencies": {
     "angular2": "2.0.0-beta.13",
     "es6-promise": "3.0.2",
-    "es6-shim": "0.35.0",
+    "es6-shim": "^0.35.0",
     "ionic-angular": "2.0.0-beta.4",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
+    "lodash.filter": "^4.3.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.6"
+    "zone.js": "^0.6.6"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -18,7 +19,7 @@
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-watch": "4.3.5",
-    "ionic-gulp-browserify-es2015": "^1.0.0",
+    "ionic-gulp-browserify-es2015": "^1.0.2",
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
