--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
+    "angular2": "2.0.0-beta.15",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
-    "ionic-angular": "2.0.0-beta.4",
+    "ionic-angular": "2.0.0-beta.6",
     "ionic-native": "^1.1.0",
-    "ionicons": "3.0.0-alpha.3",
+    "ionicons": "3.0.0",
     "lodash.filter": "^4.3.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "^0.6.6"
+    "zone.js": "^0.6.10"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -23,7 +23,7 @@
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^1.0.0",
+    "ionic-gulp-scripts-copy": "^1.0.1",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.3",
     "karma-chrome-launcher": "^0.2.3",
