--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "dependencies": {
-    "angular2": "2.0.0-beta.15",
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/http": "^2.0.0-rc.1",
+    "@angular/platform-browser": "^2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "@angular/router": "^2.0.0-rc.1",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
-    "ionic-angular": "2.0.0-beta.6",
+    "ionic-angular": "^2.0.0-beta.7",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0",
     "lodash.filter": "^4.3.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "^0.6.10"
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.0-beta.6",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "appium": "^1.5.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.6.0",
     "babelify": "7.2.0",
@@ -23,15 +30,14 @@
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^1.0.1",
+    "ionic-gulp-scripts-copy": "^2.0.0",
+    "jasmine": "^2.4.1",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.3",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
-    "wd": "^0.4.0",
-    "jasmine": "^2.4.1",
     "protractor": "^3.1.1",
-    "appium": "^1.5.0"
+    "wd": "^0.4.0"
   },
   "name": "dbt",
   "description": "dbt: An Ionic project",
