--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^2.0.0-rc.1",
-    "es6-promise": "3.0.2",
-    "es6-shim": "^0.35.0",
-    "ionic-angular": "^2.0.0-beta.7",
+    "es6-shim": "0.35.0",
+    "ionic-angular": "^2.0.0-beta.8",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0",
     "lodash.filter": "^4.3.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.6",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
@@ -26,7 +25,7 @@
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-watch": "4.3.5",
-    "ionic-gulp-browserify-es2015": "^1.0.2",
+    "ionic-gulp-browserify-es2015": "^1.1.0",
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
