--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ionic-angular": "^2.0.0-beta.8",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0",
+    "jspdf-yworks": "^1.2.65",
     "lodash.filter": "^4.3.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
