--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/http": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@angular/router": "^2.0.0-rc.1",
+    "@angular/common": "^2.0.0-rc.3",
+    "@angular/compiler": "^2.0.0-rc.3",
+    "@angular/core": "^2.0.0-rc.3",
+    "@angular/http": "^2.0.0-rc.3",
+    "@angular/platform-browser": "^2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
+    "@angular/router": "^2.0.0-rc.2",
     "es6-shim": "0.35.0",
-    "ionic-angular": "^2.0.0-beta.8",
+    "ionic-angular": "^2.0.0-beta.10",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0",
     "json2csv": "^3.4.2",
@@ -55,10 +55,7 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
     "cordova-plugin-contacts",
-    {
-      "locator": "https://github.com/NotThatSmith/cordova-plugin-sms",
-      "id": "cordova-plugin-sms-loose-compare"
-    }
+    "cordova-plugin-sms"
   ],
   "cordovaPlatforms": [
     "android",
